04-flex-information - completed - 24.3.24 I learned alot in this one. first i created divs around all info sections. next i put the title in its own flex box centered it using justify content and added a margin to give the gap. next i used the .ifo to align them all and get them into the correct postions. next i used another display flex but this time the row feature to align them altother there is an easier way todo this but it means adding things in mind mind is easier. lastly i center aligned the text.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,7 +10,30 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
 }
+
+.info{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.i{
+  display: flex;
+  flex-direction: row;
+  max-width: 200px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.text{
+  text-align: center;
+  
+}
+
 
 /* do not edit this footer */
 .footer {
